slides-examples/day-2/ingress/dokuwiki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dokuwiki
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dokuwiki
  template:
    metadata:
      labels:
        app: dokuwiki
    spec:
      containers:
        - image: bitnami/dokuwiki
          name: dokuwiki
          ports:
            - name: http
              containerPort: 80
