slides-examples/day-2/ingress/dokuwiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dokuwiki
  namespace: default
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: dokuwiki
